[package]
name = "tracing-core-x"
authors = ["29 <791603901@qq.com>"]
version = "0.0.2"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["serde", "send", "sync", "logging", "profiling"]
categories = ["concurrency", "data-structures", "development-tools::debugging", "development-tools::profiling", "encoding"]
repository = "https://github.com/opensound-org/tracing-core-x"
homepage = "https://github.com/opensound-org/tracing-core-x"
description = """
🚫 The project has been abandoned, please do not use it!
"""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Because we used `rustc-check-cfg` in build script
# 因为我们在构建脚本中使用了`rustc-check-cfg`
# https://blog.rust-lang.org/2024/05/06/check-cfg.html
rust-version = "1.80.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
tracing-core = "0.1.32"

[dev-dependencies]
nu-ansi-term = "0.50.1"
rand = "0.8.5"
serde_json = "1.0.133"
tokio = { version = "1.4.11", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }

[build-dependencies]
version_check = "0.9.5"
